[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passwordgenerator-salina"
version = "0.1.0"
authors = [
  { name = "Salina Shrestha", email = "Salenashrestha18@gmail.com" },
]
description = "A simple Python project that generates strong passwords and saves them to a file."
readme = "README.md"
requires-python = ">=3.12"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/salena188/password_generator"
Issues = "https://github.com/salena188/password_generator/issues"


